# git-merge-resolver

./: .gitignore  Dockerfile  README.md  inference.py  milestone.md  openenv.yaml  planning.md  pyproject.toml
git_merge_resolver/: client.py  environment.py  models.py
git_merge_resolver/graders/: grader.py
git_merge_resolver/rewards/: reward.py
git_merge_resolver/tasks/: easy_tasks.py  hard_tasks.py  medium_tasks.py  task_registry.py
git_merge_resolver/utils/: conflict_parser.py  diff_utils.py
server/: Dockerfile  app.py  requirements.txt
tests/: test_environment.py  test_graders.py  test_models.py  test_rewards.py
